--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "prettier": "^2.5.1",
+        "prop-types": "^15.7.2"
     }
 }
